# dsync

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  protols.toml
.github/workflows/: test-build.yaml
.zed/: settings.json
docs/: cli.md  db.md  premises.md
dsync-cli/: Cargo.toml
dsync-cli/src/: cli.rs  client.rs  command.rs  config.rs  logging.rs  main.rs
dsync-cli/src/cli/: command.rs  mod.rs
dsync-cli/src/cli/command/: cmdimpl.rs  command_impl.rs  file.rs  group.rs  host.rs  model.rs  server.rs
dsync-cli/src/cli/command/cmdimpl/: file.rs  group.rs
dsync-cli/src/cli/command/model/: file.rs  group.rs  host.rs
dsync-cli/src/command/: file.rs  group.rs  host.rs  model.rs  server.rs  utils.rs
dsync-cli/src/command/file/: util.rs
dsync-cli/src/logging/: mod.rs
dsync-cli/tests/: playground.rs
dsync-client/: Cargo.toml  build.rs
dsync-client/src/: main.rs
dsync-client/src/cli/: command.rs  mod.rs
dsync-client/src/logging/: mod.rs
dsync-proto/: Cargo.toml  build.rs
dsync-proto/proto/: cli-defs.proto  cli.proto  server-defs.proto  server.proto  shared-defs.proto  user-agent-defs.proto  user-agent.proto
dsync-proto/proto-generated/: cli.rs  filetransfer.rs  model.common.rs  model.server.rs  server.rs  services.file_transfer.rs  services.host_discovery.rs  services.progress.rs  services.server_control.rs  services.user_agent.rs  shared.rs  user_agent.rs
dsync-proto/src/: lib.rs
dsync-server/: .env  .sqruff  Cargo.toml  build.rs  diesel.toml  readme.md
dsync-server/migrations/2025-05-28-174610_create_server_info/: down.sql  up.sql
dsync-server/migrations/2025-06-04-201609_create_file_storage/: down.sql  up.sql
dsync-server/migrations/2025-06-04-203056_create_remote_file_storage/: down.sql  up.sql
dsync-server/migrations/2025-06-14-072507_create_group_table/: down.sql  up.sql
dsync-server/migrations/2025-06-14-073217_create_group_mapping_table/: up.sql
dsync-server/migrations/2025-11-11-140332-0000_setup/: down.sql  up.sql
dsync-server/src/: cli.rs  logging.rs  main.rs  models.rs  schema.rs  server.rs  utils.rs
dsync-server/src/logging/: mod.rs
dsync-server/src/server/: api.rs  config.rs  context.rs  data.rs  database.rs  global_context.rs  peer_service.rs  service.rs  util.rs
dsync-server/src/server/data/: repo.rs  source.rs
dsync-server/src/server/data/source/: sqlite.rs
dsync-server/src/server/data/source/sqlite/: database.rs
dsync-server/src/server/data/source/sqlite/database/: conversion.rs  initialization.rs  schema.rs
dsync-server/src/server/database/: conversion.rs  error.rs  models.rs  proxy.rs  schema.rs
dsync-server/src/server/service/: client.rs  file_transfer.rs  host_discovery.rs  peer.rs  progress.rs  server_control.rs  tools.rs  user_agent.rs
dsync-server/src/server/service/file_transfer/: session.rs  session_factory.rs  session_registry.rs
dsync-server/src/server/service/tools/: file.rs  net.rs  time.rs
dsync-server/src/server/service/tools/net/: addr_discovery.rs
dsync-server/src/utils/: mod.rs
dsync-shared/: Cargo.toml
dsync-shared/src/: conn.rs  core.rs  default.rs  lib.rs  model.rs
dsync_client/: Cargo.toml
dsync_proto/: Cargo.toml  build.rs
dsync_proto/proto/: server-defs.proto
dsync_server/: Cargo.toml  diesel.toml
dsync_shared/: Cargo.toml
proto/: client-api.proto  helloworld.proto
src/: server.rs
(+26 files in other folders)
