[workspace]
resolver = "3"
members = ["dsync-cli", "dsync-proto", "dsync-server", "dsync-shared"]

[workspace.dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
log4rs = { version = "1.3.0", features = ["console_appender"] }
log = "0.4.27"
clap = { version = "4.5.38", features = ["derive"] }
