[package]
name = "dsync-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
dsync-proto = { path = "../dsync-proto" }
dsync-shared = { path = "../dsync-shared" }
prettytable-rs = "0.10.0"
