[package]
name = "dsync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
log4rs = { version = "1.3.0", features = ["console_appender"] }
log = "0.4.27"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dsync-proto = { path = "../dsync-proto" }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4"] }
clap = { version = "4.5.38", features = ["derive"] }
