[package]
name = "dsync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dsync-proto = { path = "../dsync-proto" }
dsync-shared = { path = "../dsync-shared" }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4"] }
clap = { workspace = true }
sha1_smol = "1.0.1"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
